---------------------------------------------------------------------------------------------------
Version: 0.4.7
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.4.6
Date: 2023-06-04
  Bugfixes:
    - Fixed a crash when the edit task window is somehow invalid (#30, #31)
---------------------------------------------------------------------------------------------------
Version: 0.4.5
Date: 2023-05-12
  Bugfixes:
    - Fixed scroll pane stretching issues with multi-line descriptions (#6)
---------------------------------------------------------------------------------------------------
Version: 0.4.4
Date: 2023-05-06
  Features:
    - Added "filter active task: assigned to me" option (#27)
---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: 2022-11-13
  Changes:
    - Added German locale (Mape6)
---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 2022-03-12
  Changes:
    - Added Korean locale (by x2605) (#18)
  Bugfixes:
    - Fixed a crash when adding a private subtask (#19)
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 2022-02-24
  Changes:
    - Added Spanish and Catalan locales (by willyw0nka) (#14)
    - Updated Russian locale (by Astorin) (#15)
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 2022-02-23
  Features:
    - Added an option to automatically add new tasks to the top
    - Added an option to automatically mark new tasks as in progress
    - Added an option to show the active (topmost in progress) task at the top of the screen
  Changes:
    - Increased GUI spacing to improve readability
    - Made add subtask button easier to click