@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.7
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash when the GUI state somehow gets desynced from the tasks state (#41)
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.6
 Date: 2023-06-04
